Manifest/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.2
        ports:
        - containerPort: 6379
        # resources:
        #   limits:
        #     memory: "256Mi"
        #     cpu: "500m"
        #   requests:
        #     memory: "128Mi"
        #     cpu: "250m"
