Manifest/movieservice-db-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieservice-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movieservice-db
  template:
    metadata:
      labels:
        app: movieservice-db
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data
            name: movieservice-db-volume
      volumes:
      - name: movieservice-db-volume
        persistentVolumeClaim:
          claimName: movieservice-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: movieservice-db-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: movieservice-db
  ports:
  - name: mssql
    protocol: TCP
    port: 1433
    targetPort: 1433
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: movieservice-db-loadbalancer-srv
# spec:
#   type: LoadBalancer
#   selector:
#     app: movieservice-db
#   ports:
#   - protocol: TCP
#     port: 1433
#     targetPort: 1433
