Manifest/movieservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movieservice
  template:
    metadata:
      labels:
        app: movieservice
    spec:
      containers:
        - name: movieservice
          image: vladockerhub/movieservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: movieservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: movieservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
