Manifest/movieservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movieservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movieservice
  template:
    metadata:
      labels:
        app: movieservice
    spec:
      containers:
        - name: movieservice
          image: vladockerhub/movieservice:latest
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: platforms-clusterip-srv
# spec:
#   type: ClusterIP
#   selector:
#     app: movieservice
#   ports:
#   - name: movieservice
#     protocol: TCP
#     port: 80
#     targetPort: 80
#   - name: plafromgrpc
#     protocol: TCP
#     port: 666
#     targetPort: 666

apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service
  labels:
    app: movie-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
      - name: movie-service
        image: your-docker-registry/movie-service:latest
        ports:
        - containerPort: 80
      apiVersion: v1
kind: Service
metadata:
  name: movie-service
spec:
  selector:
    app: movie-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP



  #movie-service-secret.yaml
 apiVersion: v1
kind: Secret
metadata:
  name: movie-service-secrets
type: Opaque
data:
  connection-string: base64-encoded-connection-string
