Manifest/redis-clusterip-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-clusterip-srv
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis-db
  type: ClusterIP
