Manifest/reviewservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviewservice
  template:
    metadata:
      labels:
        app: reviewservice
    spec:
      containers:
        - name: reviewservice
          image: vladockerhub/reviewservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: reviewservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: reviewservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
