Manifest/userservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
        - name: userservice
          image: vladockerhub/userservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: userservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: userservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
