Manifest/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/movies
            pathType: Prefix
            backend:
              service:
                name: movieservice-clusterip-srv
                port:
                  number: 80
          - path: /api/categories
            pathType: Prefix
            backend:
              service:
                name: movieservice-clusterip-srv
                port:
                  number: 80
          - path: /api/contenttypes
            pathType: Prefix
            backend:
              service:
                name: movieservice-clusterip-srv
                port:
                  number: 80
          - path: /api/reviews
            pathType: Prefix
            backend:
              service:
                name: reviewservice-clusterip-srv
                port:
                  number: 80
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: userservice-clusterip-srv
                port:
                  number: 80
