Manifest/movieservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movieservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/movies
            pathType: Prefix
            backend:
              service:
                name: movieservice-clusterip-srv
                port:
                  number: 80
          - path: /api/categories
            pathType: Prefix
            backend:
              service:
                name: movieservice-clusterip-srv
                port:
                  number: 80
          - path: /api/contenttypes
            pathType: Prefix
            backend:
              service:
                name: movieservice-clusterip-srv
                port:
                  number: 80
