Manifest/userservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: userservice-clusterip-srv
                port:
                  number: 80
